modify layout of create.html

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -20,12 +20,14 @@
             <input type="text" name="age" id="age">
         </div>
         <div class="form-group">
-            <select name="os">
+            <label for="os">Operation System: </label>
+            <select name="os" id="os">
                 <option name="linux" id="linux">Linux</option>
                 <option name="macos" id="macos">MacOS</option>
             </select>
         </div>
         <div class="form-group">
+            <label for="os">Developer League: </label>
             <select name="league">
                 <option name="backend" id="backend">Backend</option>
                 <option name="frontend" id="frontend">Frontend</option>
@@ -36,6 +38,7 @@
             </select>
         </div>
         <div class="form-group">
+            <label for="os">Language: </label>
             <select name="language">
                 <option name="java" id="java">Java</option>
                 <option name="javascript" id="javascript">Javascript</option>
@@ -44,6 +47,7 @@
             </select>
         </div>
         <div class="form-group">
+            <label for="os">Technology: </label>
             <select name="technology">
                 <option name="vim" id="vim">Vim</option>
                 <option name="nano" id="nano">Nano</option>
