--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -5,10 +5,16 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Welcome to DevWars</h1>
 <h2>MöthGames proudly presents:
     DevWars, an interactive, turn-based web application where you can create your own developer character,
     and fight other developer characters with skills, items, weapons etc.</h2>
-
+<p>If you are here for the first time, go ahead, and create your own character!</p>
+<form method="get" action="/create">
+    <button>CREATE CHARACTER</button>
+</form>
+<p>... or, if you prefer, go ahead and fight with an existing character!</p>
+<form method="get" action="/lobby">
+    <button>ENTER THE ARENA!</button>
+</form>
 </body>
 </html>
