feat(Lobby): create FIGHT button and the post endpoint for it to enter the arena

--- a/src/main/resources/templates/lobby.html
+++ b/src/main/resources/templates/lobby.html
@@ -7,7 +7,7 @@
 <body>
 <h2>Welcome to the Lobby! </h2>
 <p>Here, Player 1 and Player 2, you guys can choose your characters. After that... well.</p>
-<form method="post" action="/lobby">
+<form method="post" action="/getCharacters">
     <button>FIGHT!</button>
 </form>
 </body>
