add CharacterService and start working on create character endpoint

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,7 +11,7 @@ body {
     background-color: black;
 }
 
-.row {
-    border: 2px dashed white;
+.col-3, .col-6, .col-8 {
+    border: 2px dashed white !important;
     margin: 20px !important;
 }
