--- a/src/main/resources/templates/arena.html
+++ b/src/main/resources/templates/arena.html
@@ -5,6 +5,18 @@
     <title>Title</title>
 </head>
 <body>
-<h2>Hello World!</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-3">
+            <h2>Challenger</h2>
+        </div>
+        <div class="col-6">
+            <h2>Battle log</h2>
+        </div>
+        <div class="col-3">
+            <h2>Enemy</h2>
+        </div>
+    </div>
+</div>
 </body>
 </html>
