feat(lobby): add 'back to main menu' button

--- a/src/main/resources/templates/lobby.html
+++ b/src/main/resources/templates/lobby.html
@@ -18,5 +18,8 @@
     </select><br>
     <button>FIGHT!</button>
 </form>
+<form method="get" action="/">
+    <button>Back to main menu</button>
+</form>
 </body>
 </html>
