--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -9,36 +9,30 @@
     <div class="row">
         <div class="col-8">
             <h2>Character creation</h2>
-
             <form th:object="${newcharacter}" action="/create" method="post">
                 <div class="form-group">
                     <label for="name">Name:</label>
-                    <input th:value="*{name}" name="name" id="name">
+                    <input th:field="*{name}" id="name">
                 </div>
                 <div class="form-group">
                     <label for="age">Age:</label>
-                    <input th:value="*{age}" type="text" name="age" id="age">
+                    <input id="age" th:field="*{age}" type="number">
                 </div>
                 <div class="form-group">
-                    <label>Operation System: </label>
-                    <select name="os" id="os">
-                        <option th:value="*{os}" th:each="os : ${oslist}" th:text="${os.name}"></option>
+                    <label for="os">Operation System:</label>
+                    <select id="os">
+                        <option th:each="os : ${oslist}" th:text="${os.name}" th:value="*{os}"></option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label>Developer League: </label>
                     <select>
-                        <option th:each="aleague : ${T(com.greenfoxacademy.devwars.models.characterlogic.League).values()}"
-                                th:value="${{aleague}}"
-                                th:text="${aleague}">
+                        <option th:each="league : ${T(com.greenfoxacademy.devwars.models.characterlogic.League).values()}"
+                                th:value="${league}" th:text="${leagueStat.current}">
                         </option>
                     </select>
                 </div>
-                <div class="form-group">
-                    <label>Competences: </label>
-                    <input type="checkbox" th:value="*{competences}" th:each="competence : ${competences}" th:text="${competence.description}">
-                </div>
-                <div class="form-group">
+                Todo: create Language and Technology
                     <input class="btn btn-dark" type="submit" value="Create">
                 </div>
             </form>
