--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -20,21 +20,31 @@
                 </div>
                 <div class="form-group">
                     <label for="os">Operation System:</label>
-                    <select id="os">
-                        <option th:each="os : ${oslist}" th:text="${os.name}" th:value="*{os}"></option>
+                    <select id="os" name="osId">
+                        <option th:each="os : ${oslist}" th:text="${os.name}" th:value="${os.id}"></option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label>Developer League: </label>
-                    <select>
+                    <label for="league">Developer League: </label>
+                    <select id="league" name="league">
                         <option th:each="league : ${T(com.greenfoxacademy.devwars.models.characterlogic.League).values()}"
-                                th:value="${league}" th:text="${leagueStat.current}">
+                                th:value="${{league}}" th:text="${leagueStat.current}">
                         </option>
                     </select>
                 </div>
-                Todo: create Language and Technology
-                    <input class="btn btn-dark" type="submit" value="Create">
+                <div class="form-group">
+                    <label>Languages:</label>
+                    <select>
+                        <option th:each="language : ${languages}" th:value="${language}" th:text="${language.description}"></option>
+                    </select>
                 </div>
+                <div class="form-group">
+                    <label>Technology:</label>
+                    <select>
+                        <option th:each="technology : ${technologies}" th:value="${technology}" th:text="${technology.description}"></option>
+                    </select>
+                </div>
+                <input class="btn btn-dark" type="submit" value="Create">
             </form>
         </div>
     </div>
