style changes in lobby

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -6,17 +6,17 @@
 </head>
 <body>
 <div class="container">
-    <div class="col-8">
-        <h2><img src="/images/moth.jpg"> MöthGames proudly presents:
+    <div class="col-10">
+        <h2><img class="logo" src="/images/moth.jpg"> MöthGames proudly presents:
             DevWars, an interactive, turn-based web application where you can create your own developer character,
             and fight other developer characters with skills, items, weapons etc.</h2>
         <p>If you are here for the first time, go ahead, and create your own character!</p>
         <form method="get" action="/create">
-            <button>CREATE CHARACTER</button>
+            <button class="btn btn-dark">CREATE CHARACTER</button>
         </form>
         <p>... or, if you prefer, go ahead and fight with an existing character!</p>
         <form method="get" action="/lobby">
-            <button>ENTER THE ARENA!</button>
+            <button class="btn btn-dark">ENTER THE ARENA!</button>
         </form>
     </div>
 </div>
