--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,7 +12,7 @@ body {
     color: white;
 }
 
-.col-3, .col-5, .col-8 {
+.col-3, .col-5, .col-8, .col-10 {
     border: 2px dashed white !important;
     margin: 20px !important;
 }
