feat(char-create): create back to main menu button

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -45,6 +45,9 @@
                     </select>
                 </div>
                 <input class="btn btn-dark" type="submit" value="Create">
+                <form method="get" action="/">
+                    <input type="button" class="btn btn-dark" value="Back to main menu"></button>
+                </form>
             </form>
         </div>
     </div>
