image will now appear in arena fight based on the league of the character

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,4 +1,4 @@
-h1, h2, p, td, label, span {
+h1, h2, p, td, label, span, a, button {
     font-family: "Inconsolata", "Courier New", sans-serif !important;
     color: white;
 }
