--- a/src/main/resources/templates/arena.html
+++ b/src/main/resources/templates/arena.html
@@ -10,6 +10,7 @@
     <div class="row" th:object="${arena}">
         <div class="col-3">
             <h2>Current Hero</h2>
+            <img th:src="${arena.getCurrentHero().getBaseCharacter().getImgSource()}">
             <table>
                 <tr><th>Stats</th><th></th></tr>
                 <tr>
