--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/create">Create developer <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/create">Create developer</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/lobby">Start Fight</a>
