--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -12,7 +12,7 @@
             <form th:object="${newcharacter}" action="/create" method="post">
                 <div class="form-group">
                     <label for="name">Name:</label>
-                    <input th:field="*{name}" id="name">
+                    <input th:field="*{name}" id="name" required type="text">
                 </div>
                 <div class="form-group">
                     <label for="age">Age:</label>
@@ -45,9 +45,9 @@
                     </select>
                 </div>
                 <input class="btn btn-dark" type="submit" value="Create">
-                <form method="get" action="/">
-                    <input type="button" class="btn btn-dark" value="Back to main menu"></button>
-                </form>
+            </form>
+            <form action="/" method="get">
+                <input class="btn btn-dark" type="submit" value="Back to main menu">
             </form>
         </div>
     </div>
